Enable preview for the String Templates feature in Java 21